Initial commit with organized frontend and backend

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,2 @@
 PORT=5000
-DB_HOST=db
-DB_USER=root
-DB_PASSWORD=Aarthi@2204
-DB_NAME=portfolio_db
+DATABASE_URL=postgresql://portfolio_db_f91z_user:zUpjovXVUSqNsA71dEIyj8hrn3FzSJh8@dpg-d16f7v95pdvs73f8flog-a.singapore-postgres.render.com:5432/portfolio_db_f91z
